--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Özcan Mirzanli</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" href="/assets/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <app-root></app-root>
